--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
-		"@neondatabase/serverless": "^1.0.2"
+		"@neondatabase/serverless": "^1.0.2",
+		"better-auth": "^1.4.5"
 	}
 }
