--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-DATABASE_URL="postgres://user:password@host:port/db-name"
+NETLIFY_DATABASE_URL=
+NETLIFY_DATABASE_URL_UNPOOLED=
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
