--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.39.1",
+    "@lucide/svelte": "^0.556.0",
     "@sveltejs/adapter-netlify": "^5.2.4",
     "@sveltejs/adapter-node": "^5.4.0",
     "@sveltejs/kit": "^2.48.5",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^22",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
     "eslint": "^9.39.1",
@@ -37,13 +39,17 @@
     "prettier-plugin-tailwindcss": "^0.7.1",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.2"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
-    "better-auth": "^1.4.6"
+    "better-auth": "^1.4.6",
+    "mode-watcher": "^1.1.0"
   }
 }
