--- a/package.json
+++ b/package.json
@@ -48,8 +48,12 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/s3-request-presigner": "^3.948.0",
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.4.6",
-    "mode-watcher": "^1.1.0"
+    "mode-watcher": "^1.1.0",
+    "nanoid": "^5.1.6",
+    "valibot": "^1.2.0"
   }
 }
