--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_S3_BUCKET=
-AWS_ENDPOINT=
+BB_ACCESS_KEY_ID=
+BB_SECRET_ACCESS_KEY=
+BB_REGION=
+BB_S3_BUCKET=
+BB_ENDPOINT=
 PUBLIC_CDN_URL=
