--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/s3-request-presigner": "^3.948.0",
+    "@jaames/iro": "^5.5.2",
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.4.6",
     "mode-watcher": "^1.1.0",
